# daemon-iot-tcpipDb

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Configure.h  Makefile  MySQLService.cpp  MySQLService.h  README.md  TCPService.cpp  TCPService.h  appConfig.json  jsonReader.cpp  main.cpp  send_payload.py
config/: appConfig.json
test/: CMakeLists-jsonReader.txt  CMakeLists.txt  jsonReader.cpp  send_payload.py  sociService.cpp
